2002-05-20  NOMIYA Masaru  <nomiya@ttmy.ne.jp>

	* shimbun/sb-nikkei.el (shimbun-nikkei-groups): Add `main'.

2002-05-20  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-palmfan.el (shimbun-palmfan-palmwarefan-headers):
	Modify regexp to pick up price from BODY for working around.

2002-05-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-mailman.el (shimbun-mailman-make-contents): New
	function separated from `shimbun-make-contents'.
	(shimbun-make-contents): Use it.
	(shimbun-mailman-headers): New function separated from
	`shimbun-headers'; rewrite it to search new articles in the
	reverse order.

	* shimbun/sb-nikkei.el (shimbun-nikkei-get-headers): Don't include
	year, month and day numbers in Message-ID.

2002-05-20  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-ruby.el (shimbun-get-headers): Do not use nreverse
	for HEADERS.

2002-05-19  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-palmfan.el (shimbun-palmfan-group-path-alist): Add
	palmwarefan entry.
	(shimbun-palmfan-palmwarefan-date-regexp): New constant.
	(shimbun-reply-to): Change email address to brian@palmfan.com
	if GROUP is "palmwarefan".
	(shimbun-palmfan-palmwarefan-headers): New function.
	(shimbun-headers): Call `shimbun-palmfan-palmwarefan-headers' if
	GROUP is "palmwarefan".
	(shimbun-palmfan-news-headers): Do not use nreverse for HEADERS.

2002-05-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (tarball): Chmod 755 configure.

2002-05-16  Hidetaka Iwai <tyuyu@mb6.seikyou.ne.jp>

	* shimbun/sb-japantimes.el, shimbun/sb-texfaq.el: New files.

2002-05-16  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-auto-show): Check multiple command like a
	`previous|next-line' or `beginning|end-of-buffer' at the buffer's
	edge.
	(w3m-window-hscroll): New function to rescue for XEmacs with Mule.
	(w3m-current-column, w3m-set-window-hscroll): Chenge method of the
	calculation point.
	the difference points.